Correct lower horizontal scrollbar in log viewer
The horizontal scrollbar was taller than the vertical scrollbar was
wide.

Also the background-color setting was just useless and could be removed.

--- a/src/App/app.scss
+++ b/src/App/app.scss
@@ -47,8 +47,8 @@
             transition: margin-bottom $normal-transition;
 
             ::-webkit-scrollbar, ::-webkit-scrollbar-corner {
-                background-color: $gray-900;
                 width: 1em;
+                height: 1em;
             }
 
             ::-webkit-scrollbar-thumb {
